--- a/index.css
+++ b/index.css
@@ -17,12 +17,17 @@ body, html {
   position: absolute;
   height: 20rem;
   width: 25rem;
-  background: rgba(255,0,0,.9);
+  background: #2c3e50;
   color: white;
   border-radius: 6px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
 }
 
 .gaslight-exit {
